<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="421dp"
        android:layout_height="match_parent"
        tools:srcCompat="@drawable/sporrrt" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:layout_marginTop="3dp"
        android:layout_gravity="top|center"
        app:srcCompat="@drawable/lambo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lambo"
        android:textStyle="bold"
        android:textSize="40dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginBottom="250dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aven"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginBottom="218dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:backgroundTint="@color/black"
        android:layout_marginBottom="26dp"
        android:text="@string/buy" />
</FrameLayout>